@@ -139,7 +139,7 @@ class PythonFragment(PythonCode):
     etc.
     """
     def __init__(self, code, **exception_kwargs):
-        m = re.match(r'^(\w+)(?:\s+(.*?))?:$', code.strip())
+        m = re.match(r'^(\w+)(?:\s+(.*?))?:$', code.strip(), re.S)
         if not m:
             raise exceptions.CompileException("Fragment '%s' is not a partial control statement" % code, **exception_kwargs)
         (keyword, expr) = m.group(1,2)
